--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -7,19 +7,10 @@
         <label for="email">Email</label>
         <input type="text" placeholder="example@email.com" class="form-control" name="email">
     </div>
-    <div class="form-group">
-        <label for="company">Company</label>
-        <input type="text" placeholder="Example Ltd" class="form-control" name="company">
-    </div>
-
-    <div class="form-group">
-        <label for="number">Phone Number</label>
-        <input type="tel" placeholder="+44778217779" class="form-control" name="number">
-    </div>
 
     <div class="form-group">
         <label for="message">Message</label>
-        <textarea class="form-control" name="message" placeholder="Hello, lets chat"></textarea>
+        <textarea class="form-control" name="message" placeholder="Hello, let's chat"></textarea>
     </div>
 
     <div class="form-group">
