--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
     <script type='application/javascript' src='{{ "/js/vendor/retina.min.js" | prepend: site.baseurl }}'></script>
     {% endif %}
     <script src=' {{ "/js/main.js" | prepend: site.baseurl }}'></script>
+    <script id="dsq-count-scr" src="//just-sudo-it.disqus.com/count.js" async></script>
   </body>
 
 </html>
