--- a/_layouts/post-sidebar.html
+++ b/_layouts/post-sidebar.html
@@ -46,21 +46,26 @@ comments: true
                     <a href="{{ post.url | prepend: site.baseurl }}"><h3>{{ post.title }}</h3></a>
                 </div>
                 {% endif %}
+
+
             {% endfor %}
 
-			 {% if page.comments %}
+
+        </div>
+
+    </div> <!--/row -->
+
+    <div class="row">
+        <div class="col-xs-12 col-md-8 single-content-sidebar">
+            {% if page.comments %}
 				<div id="disqus_thread"></div>
 				<script>
-
-				/**
-				*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-				*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-				/*
+			
 				var disqus_config = function () {
-				this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-				this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+				this.page.url = "http://just-sudo-it.pl"; // <--- use canonical URL
+				this.page.identifier = "{{ page.id }}";
 				};
-				*/
+				
 				(function() { // DON'T EDIT BELOW THIS LINE
 				var d = document, s = d.createElement('script');
 				s.src = 'https://just-sudo-it.disqus.com/embed.js';
@@ -71,8 +76,7 @@ comments: true
 				<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 			{% endif %}
         </div>
-
-    </div> <!--/row -->
+    </div>
 
 </main> <!-- /container -->
 
