--- a/_layouts/post-sidebar.html
+++ b/_layouts/post-sidebar.html
@@ -1,4 +1,6 @@
---- layout: default ---
+--- 
+layout: default 
+---
 
 <header class="hero-image" style='background-image: url({{"/img/" | append: page.feature_image | prepend: site.baseurl }}.jpg);'>
     <span class="menu-trigger animated fadeInDown">
